One more example.

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -205,8 +205,10 @@ Example of a part of ROI6 that can be collapsed if strand is ignored.
 ```{r ROI6_invs2}
 ROI6[1:6] |> plotApairOfChrs()
 ROI6[1:6] |> plyranges::mutate(strand = '*') |> coalesce_contigs() |> plotApairOfChrs()
-```
 
+ROI6[13:23] |> plotApairOfChrs()
+ROI6[13:23] |> plyranges::mutate(strand = '*') |> coalesce_contigs() |> plotApairOfChrs()
+```
 
 # Filling inversions to better see the rest (ROI9)
 
